--- a/src/img.qrc
+++ b/src/img.qrc
@@ -21,8 +21,8 @@
 	<file>img/schiffe/sh07.gif</file>-->
 <!-- 	<file>img/schiffe/schiff_gerade_skaliert1.png</file> -->
 	<file>img/schiffe/schiff_gerade_skaliert2.png</file>
-
-
+	<file>img/schiffe/sh08_braun.png</file>
+	
 	<file>img/objekte/wolke01.png</file>
 	<file>img/objekte/wolke04.png</file>
 
