trading-class, production: -Kontor  -City; SideBar -> ship-stat-color
trading-class: Bugs fixed / Features reimplemented
kontor-ressource-production built in; little changes in the city-ressource-production
SideBar shows on a color-panel the state/damage of the ship: green -> good; yellow -> average; red->(heavily) damaged

--- a/src/img.qrc
+++ b/src/img.qrc
@@ -31,6 +31,7 @@
 	<file>img/objekte/ziffernblatt4.png</file>
 
 	<file>img/icons/steuerrad01.png</file>
+	<file>img/icons/schiff_icon.png</file>
 
 	<file>img/icons/kiste_icon_alpha_hell.png</file>
 
