little changes, added "Person"-class -> for Landwalk and mapdecoration (city-guards later)

--- a/src/img.qrc
+++ b/src/img.qrc
@@ -40,7 +40,7 @@
 
 
 	<file>img/icons/rotkreuz_alpha01.png</file>
-
+	<file>img/sonstige/charset1.png</file>
 	<file>img/sonstige/rot.png</file>
 <!--	<file>img/objekte/stein01.png</file>
 
