person-class-things: fill image-lists; new landing-boat

--- a/src/img.qrc
+++ b/src/img.qrc
@@ -22,6 +22,9 @@
 <!-- 	<file>img/schiffe/schiff_gerade_skaliert1.png</file> -->
 	<file>img/schiffe/schiff_gerade_skaliert2.png</file>
 	<file>img/schiffe/sh08_braun.png</file>
+	<file>img/schiffe/beiboot_5_100__29_rotat.png</file>
+	<file>img/schiffe/beiboot_5_30x95.png</file>
+
 	
 	<file>img/objekte/wolke01.png</file>
 	<file>img/objekte/wolke04.png</file>
