--- a/src/img.qrc
+++ b/src/img.qrc
@@ -21,8 +21,8 @@
 	<file>img/schiffe/sh07.gif</file>-->
 <!-- 	<file>img/schiffe/schiff_gerade_skaliert1.png</file> -->
 	<file>img/schiffe/schiff_gerade_skaliert2.png</file>
-	<file>img/schiffe/sh08_braun.png</file>
-	<file>img/schiffe/beiboot_5_100__29_rotat.png</file>
+	<!---<file>img/schiffe/sh08_braun.png</file>
+	<file>img/schiffe/beiboot_5_100__29_rotat.png</file>-->
 	<file>img/schiffe/beiboot_5_30x95.png</file>
 
 	
