--- a/src/img.qrc
+++ b/src/img.qrc
@@ -44,6 +44,7 @@
 
 	<file>img/icons/rotkreuz_alpha01.png</file>
 	<file>img/sonstige/charset1.png</file>
+	<file>img/sonstige/charset1_bearb_scal_2x.png</file>
 	<file>img/sonstige/rot.png</file>
 <!--	<file>img/objekte/stein01.png</file>
 
